Fix JVM exited when running localbookie with jdk17 (#3334)
Co-authored-by: ZhangJian He <shoothzj@gmail.com>